<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llDatos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/ibNombre"
                android:src="@drawable/twotone_account_box_24"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/icon_nombre"
                />

            <EditText
                android:id="@+id/etNombre"
                android:hint="@string/h_nombre"
                android:inputType="text"
                android:text="@string/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:focusedByDefault="true"
                android:autofillHints="@string/h_nombre"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/ib_obtener_fecha"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/twotone_event_24"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_bias="0.505"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_mostrar_fecha_picker"
                android:hint="@string/h_formato_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formato_fecha"
                android:focusable="false"
                android:ems="10"
                android:inputType="date"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:autofillHints="@string/h_formato_fecha"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/ibTelefono"
                android:src="@drawable/twotone_perm_phone_msg_24"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/icon_telefono"
                />

            <EditText
                android:id="@+id/etTelefono"
                android:hint="@string/h_telefono"
                android:text="@string/telefono"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/h_telefono"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/ibEmail"
                android:src="@drawable/twotone_email_24"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/email"
                />

            <EditText
                android:id="@+id/etEmail"
                android:hint="@string/h_email"
                android:text="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/h_email"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/ibDescripcion"
                android:src="@drawable/twotone_create_24"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/icon_descripcion"
                />

            <EditText
                android:id="@+id/etDescripcion"
                android:hint="@string/h_descripcion"
                android:text="@string/descripcion"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/h_descripcion"
                />

        </LinearLayout>


        <Button
            android:id="@+id/btn_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/boton_siguiente"
            android:textStyle="bold"
            android:textSize="20sp"
            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>